--- a/app/index.html
+++ b/app/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
 
   <!-- build:css css/vendor.min.css -->
   <link rel="stylesheet" href="libs/bootstrap/dist/css/bootstrap.min.css">
@@ -17,7 +18,299 @@
 </head>
 <body>
 
-  <h1>GULP</h1>
+
+  <header class="header">
+    <div class="header__cont">
+      <h1 class="header__logo"><strong>Pax</strong> Template</h1>
+      <nav class="nav">
+        <button class="nav__btn">Home</button>
+        <a href="#" class="nav__link">About us</a>
+        <a href="#" class="nav__link">Our team</a>
+        <a href="#" class="nav__link">Portfolio</a>
+        <a href="#" class="nav__link">Contact</a>
+        <div class="nav__iconCont">
+          <a href="#"><img src="icon/facebook.png" alt="" class="nav__icon"></a>
+          <a href="#"><img src="icon/twitter.png" alt="" class="nav__icon"></a>
+        </div>
+      </nav>
+    </div>
+  </header>
+
+
+  <div class="start">
+    <div class="start__cont">
+      <h1 class="start__title">Check our creativity</h1>
+      <h2 class="start__subtitle">We are the best and we know it!</h2>
+      <button class="start__btn">Ask for price</button>
+      <div class="start__img">
+        <img src="img/MacBook.png" alt="" class="start__img">
+        <div>
+          <img src="icon/coment.png" alt="" class="start__bgicon">
+          <img src="icon/bulb.png" alt="" class="start__bgicon">
+        </div>
+        <button class="start__btnMac">
+          <p class="start__textMac">Play</p>
+          <img src="icon/play.svg" alt="" class="start__icon">
+        </button>
+      </div>
+    </div>
+  </div>
+
+
+  <div class="service">
+    <div class="service__cont">
+
+      <div class="service__item">
+        <img src="icon/service1.png" alt="" class="service__img">
+        <h1 class="service__title">Lorem ipsum</h1>
+        <h2 class="service__subtitle">
+          Cras vel eleifend nisl, ac efficitur purus. Vestibulum vestibulum aliquam lectusmattis ac.
+        </h2>
+      </div>
+
+      <div class="service__item">
+        <img src="icon/service2.png" alt="" class="service__img">
+        <h1 class="service__title">Aenean eget</h1>
+        <h2 class="service__subtitle">
+          Donec sagittis accumsan diam, eu efficitur nunc lobortis eget. Pellentesque posuere.
+        </h2>
+      </div>
+
+      <div class="service__item">
+        <img src="icon/service3.png" alt="" class="service__img">
+        <h1 class="service__title">Nulla felis quam</h1>
+        <h2 class="service__subtitle">
+          Nulla felis quam, malesuada quis tincidunt vitae, iaculis id massa. Mauris pellentesque.
+        </h2>
+      </div>
+
+      <div class="service__item">
+        <img src="icon/service4.png" alt="" class="service__img">
+        <h1 class="service__title">Mauris</h1>
+        <h2 class="service__subtitle">
+          Pellentesque posuere nisl a posuere mattis. Quisque nuet congue at, variuse.
+        </h2>
+      </div>
+    </div>
+  </div>
+
+
+<div class="creativity">
+  <div class="creativity__cont">
+    <button class="creativity__btn">Ask for price</button>
+  </div>
+</div>
+
+
+<div class="work">
+  <div class="work__cont">
+    <h1 class="work__title">How we work!</h1>
+    <h2 class="work__subtitle">We are the best and we know it!</h2>
+    <div class="work__wrap">
+      <img src="img/shema.png" alt="" class="work__img">
+      <p class="work__text">
+        Nam accumsan nunc sit amet elementum sollicitudin. Integer vel lacus eget tortor lobortis tincidunt sed eu dolor. Phasellus cursus augue ac pulvinar cursus.
+        <br><br>
+        Quisque ut erat ornare, feugiat turpis a, fringilla felis. Nulla molestie lorem et orci sagittis, et accumsan ex porta.
+        <br><br>
+        Maecenas consequat velit tellus, vel hendrerit massa fringilla eu. Suspendisse potenti. Maecenas viverra tortor sed metus euismod, at luctus massa aliquam.
+      </p>
+    </div>
+    <button class="work__btn">Ask for price</button>
+  </div>
+</div>
+
+
+<div class="slaider">
+  <div class="slaider__cont">
+    <div class="slaider__items">
+
+      <div class="slaider__item">
+        <img src="icon/team1.png" alt="" class="slaider__img">
+        <h1 class="slaider__text">
+          “You add a comment anywhere on a project, this is a fast and easy way to gather input and proposed changes from your client.”
+        </h1>
+        <p class="slaider__copy">
+          Jan Kowalski from Windu.org
+        </p>
+      </div>
+
+      <div class="slaider__item">
+        <img src="icon/team2.png" alt="" class="slaider__img">
+        <h1 class="slaider__text">
+          “You add a comment anywhere on a project, this is a fast and easy way to gather input and proposed changes from your client.”
+        </h1>
+        <p class="slaider__copy">
+          Jan Kowalski from Windu.org
+        </p>
+      </div>
+
+      <div class="slaider__item">
+        <img src="icon/team3.png" alt="" class="slaider__img">
+        <h1 class="slaider__text">
+          “You add a comment anywhere on a project, this is a fast and easy way to gather input and proposed changes from your client.”
+        </h1>
+        <p class="slaider__copy">
+          Jan Kowalski from Windu.org
+        </p>
+      </div>
+
+      <div class="slaider__item">
+        <img src="icon/team4.png" alt="" class="slaider__img">
+        <h1 class="slaider__text">
+          “You add a comment anywhere on a project, this is a fast and easy way to gather input and proposed changes from your client.”
+        </h1>
+        <p class="slaider__copy">
+          Jan Kowalski from Windu.org
+        </p>
+      </div>
+    </div>
+
+    <div class="slaider__btns">
+      <button type="button" id="nextSlide" class="slaider__btn" name="button">
+        <img src="icon/next.svg" alt="" class="slaider__icon">
+      </button>
+      <button type="button" id="prevSlide" class="slaider__btn" name="button">
+        <img src="icon/back.svg" alt="" class="slaider__icon">
+      </button>
+    </div>
+  </div>
+</div>
+
+
+<div class="team">
+  <div class="team__cont">
+    <h1 class="team__title">
+      Meet our team
+    </h1>
+    <h2 class="team__subtitle">
+      We are the best!
+    </h2>
+    <div class="team__items">
+
+      <div class="team__item">
+        <img src="icon/team1.png" alt="" class="team__img">
+        <h1 class="team__itemTitle">
+          Lorem ipsum
+        </h1>
+        <p class="team__itemText">
+          Cras vel eleifend nisl, ac efficitur purus. Vestibulum vestibulum aliquam lectusmattis ac.
+        </p>
+      </div>
+
+      <div class="team__item">
+        <img src="icon/team2.png" alt="" class="team__img">
+        <h1 class="team__itemTitle">
+          Aenean eget
+        </h1>
+        <p class="team__itemText">
+          Donec sagittis accumsan diam, eu efficitur nunc lobortis eget. Pellentesque posuere.
+        </p>
+      </div>
+
+      <div class="team__item">
+        <img src="icon/team3.png" alt="" class="team__img">
+        <h1 class="team__itemTitle">
+          Nulla felis quam
+        </h1>
+        <p class="team__itemText">
+          Nulla felis quam, malesuada quis tincidunt vitae, iaculis id massa. Mauris pellentesque.
+        </p>
+      </div>
+
+      <div class="team__item">
+        <img src="icon/team4.png" alt="" class="team__img">
+        <h1 class="team__itemTitle">
+          Mauris
+        </h1>
+        <p class="team__itemText">
+          Pellentesque posuere nisl a posuere mattis. Quisque nuet congue at, variuse.
+        </p>
+      </div>
+    </div>
+
+    <button class="team__btn">
+      Ask for price
+    </button>
+  </div>
+</div>
+
+
+<div class="map">
+  <div class="map__cont">
+    <img src="icon/map.png" alt="" class="map__img">
+  </div>
+</div>
+
+
+<div class="footer">
+  <div class="footer__cont">
+    <div class="footer__items">
+      <p class="footer__text">
+        Ad litora torquent <br>
+        Per conubia <br>
+        Nostra <br>
+        Per inceptos <br>
+        Himenaeos <br>
+        In consectetur <br>
+        Nisi sed blandit <br>
+        Tincidunt <br>
+      </p>
+      <p class="footer__text">
+        Class aptent <br>
+        Taciti sociosqu <br>
+        Ad litora torquent <br>
+        Per conubia <br>
+        Nostra <br>
+        Per inceptos <br>
+        Himenaeos <br>
+        In consectetur <br>
+        Nisi sed blandit <br>
+        Tincidunt <br>
+      </p>
+      <p class="footer__text">
+        Taciti sociosqu <br>
+        Ad litora torquent <br>
+        Per conubia <br>
+        Nostra <br>
+        Per inceptos <br>
+        Himenaeos <br>
+        In consectetur <br>
+        Nisi sed blandit <br>
+        Tincidunt <br>
+      </p>
+      <p class="footer__text">
+        Per conubia <br>
+        Nostra <br>
+        Per inceptos <br>
+        Himenaeos <br>
+        In consectetur <br>
+        Nisi sed blandit <br>
+        Tincidunt <br>
+      </p>
+    </div>
+    <p class="footer__text">
+      Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. <br>
+      Try awsome tool for desgners <strong>symu.co</strong>
+    </p>
+  </div>
+</div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
   <!-- build:js js/vendor.min.js -->
   <script src="libs/jquery/dist/jquery.min.js"></script>
